@@ -6,6 +6,7 @@ For a detailed list of changes, please see ChangeLog.
  * Enhancements:
    - GPass import script now handles folders
    - KeePassX/KeePass2 import script now handles folders
+   - Figaro import script now handles folders
 
  * Bug fixes:
    - Fixed KeePass2 import script and added tests
